optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_not_transform_bind_checked_in_var_props_for_jsx_split.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$((props) => {
	const input = useSignal(true);

  return (
		<>
			{/* var props */}
			<input
				bind:checked={input}
				{...props}
			/>
			{/* const props */}
			<input
				{...props}
				bind:checked={input}
			/>
		</>
  );
});

============================= ./should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx_FieldInput_component_Gg0iyY5WnRA.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSorted, _jsxSplit, useSignal } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const FieldInput_component_Gg0iyY5WnRA = (props) => {
	const input = useSignal(true);
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [/*#__PURE__*/ _jsxSplit("input", {
		checked: input,
		on:input: inlinedQrl(_chk, "_chk", [input]),
		..._getVarProps(props)
	}, _getConstProps(props), null, 0, null), /*#__PURE__*/ _jsxSplit("input", { ..._getVarProps(props) }, _getConstProps(props), null, 0, null)], 3, null);
};


None
/*
{
  "origin": "should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx",
  "name": "FieldInput_component_Gg0iyY5WnRA",
  "entry": null,
  "displayName": "should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx_FieldInput_component",
  "hash": "Gg0iyY5WnRA",
  "canonicalFilename": "should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx_FieldInput_component_Gg0iyY5WnRA",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "FieldInput_component_Gg0iyY5WnRA",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_FieldInput_component_Gg0iyY5WnRA = () => import("./should_not_transform_bind_checked_in_var_props_for_jsx_split.tsx_FieldInput_component_Gg0iyY5WnRA.js");
export const FieldInput = componentQrl(qrl(i_FieldInput_component_Gg0iyY5WnRA, "FieldInput_component_Gg0iyY5WnRA"));


None
== DIAGNOSTICS ==

[]
