optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_split_spread_props_with_additional_prop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$((props) => {
	return (
		<div {...props} test="test"></div>
	);
});

============================= ./should_split_spread_props_with_additional_prop.tsx_component_IdDY6DqskbY.js (ENTRY POINT)==

import{_getConstProps,_getVarProps,_jsxSplit}from"@qwik.dev/core";export const component_IdDY6DqskbY=props=>/* @__PURE__ */ _jsxSplit(`div`,{..._getVarProps(props),test:`test`},_getConstProps(props),null,0,null);

None
/*
{
  "origin": "should_split_spread_props_with_additional_prop.tsx",
  "name": "component_IdDY6DqskbY",
  "entry": null,
  "displayName": "should_split_spread_props_with_additional_prop.tsx_component",
  "hash": "IdDY6DqskbY",
  "canonicalFilename": "should_split_spread_props_with_additional_prop.tsx_component_IdDY6DqskbY",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component_IdDY6DqskbY",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= should_split_spread_props_with_additional_prop.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export default componentQrl(qrl(()=>import(`./should_split_spread_props_with_additional_prop.tsx_component_IdDY6DqskbY.js`),`component_IdDY6DqskbY`));

None
== DIAGNOSTICS ==

[]
